@@ -1,3 +1,7 @@
+2011-12-12  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #32477: Reference to tslib_pibase constructor in tx_srfreecap_pi2
+
 2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #13072: Captcha not showing up when using MP from other domain (Thanks to Ernesto Baschny)
